# adventure

./: .env  .env.development  .env.sample  .gitignore  Dockerfile  Makefile  README.md  compiled.css  docker-compose.yaml  index.css  index.html  keep_me_updated.php  package.json  postcss.config.mjs  react-router.config.ts  server.js  supervisord.conf  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: main.yaml
core/: fetch_stars.sh
eshop/: .env.development  .env.development.sample  eslint.config.js  package.json  server.js  tailwind.config.ts
eshop/server/: app.ts
eshop/src/: cutoff.tsx  mappings.server.tsx  root.tsx  sessions.tsx  sqlite.server.tsx  stars.server.tsx
eshop/src/components/: Button.tsx  CompSocLogo.tsx  Footer.tsx  Input.tsx  MyTransactions.tsx  Ornament1.tsx  Shop.tsx  Stars.tsx  Tree.tsx  UserLogin.tsx
eshop/src/routes/: _index.tsx  admin.tsx  (+12 more)
notifier/: pyproject.toml
notifier/aoc_bot/: __main__.py
notifier/aoc_bot/modules/: help_command.py  leaderboard.py  link_command.py
server/: app.ts
src/: cutoff.tsx  entry.server.tsx  root.tsx  sessions.tsx  sqlite.server.tsx  stars.server.tsx
src/components/: CompSocLogo.tsx  Input.tsx  MyTransactions.tsx  Particles.tsx  Shop.tsx  Stars.tsx  Table.tsx  Tree.tsx  UserLogin.tsx  my_transactions.tsx  shop.tsx  stars.tsx  user_login.tsx
src/routes/: _index.tsx  admin.items.tsx  admin.transactions.tsx  admin.tsx  admin.users.tsx  admin.users_.$id.tsx  login.tsx  login_.discord.tsx  login_.help.tsx  logout.tsx  setup.tsx  shop.cancel.tsx  shop.items.tsx  shop.purchase.tsx
